# predict_t_classifier

./: .gitignore  CMakeLists.txt  array.cc  array.h  class.cc  class.h  dnn.cc  dnn.h  func.cc  func.h  kill_all.sh  layer.cc  layer.h  main.cc  options.cc  options.h  perceptron.cc  perceptron.h  run_dnn_3.sh  run_dnn_3_serialize.sh  run_dnn_4.sh  run_g5_data.sh  run_perceptron.sh  train_dnn.sh  train_percptron.sh  utility.cc  utility.h
data-cleaning/: generate_data.sh  optdigits-orig_test.csv  plot_dataset.py  preprocess.py  preprocess.sh  reformat_448_data.py  testing_parsing.cc  training_data.py
testing_classifier/: run.sh  test.py
util/: format.sh
